--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </section>
    
     
-    <section>
+    <section class="team">
         <h2 class="text-team-main">Our Team</h2>
         <ul class="team-list">
             <li class="team-item">
@@ -99,7 +99,7 @@
     <ul class="portfolio-list">
         <li class="portfolio-item">
             <img class="portfolio-img" src="./images/BankingApp.jpg" alt="Banking App" width="360">
-            <h3 class="portfolio-title">BanKing App</h3>
+            <h3 class="portfolio-title">Banking App</h3>
             <p class="portfolio-text">App</p>
         </li>
         <li class="portfolio-item">
